# Cuda_Practice

./: .gitignore  .gitnore  CMakeCache.txt  Makefile  cmake_install.cmake  main  main.cu
1_Hello_World/: main.cu
2_Thread_BLock_Grid/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cu  report1.nsys-rep  report1.sqlite  report2.nsys-rep  report2.sqlite
3_Unique_index/: cmake_install.cmake  main.cu  report1.nsys-rep  summary_v2.csv
4_Warp/: CMakeLists.txt  main.cu
5_Parallel_Reduction/: CMakeLists.txt  main.cu
6_Memory/: main.cu
7_Stream_And_Events/: CMakeLists.txt  main.cu  report1.nsys-rep  report1.sqlite
8_Matrix_Operation/: CG.py  CMakeLists.txt  main.cu  myOperation.cpp  myOperation.cu  myOperation.hpp
